<resources>
    <string name="app_name">FingerString</string>
    <string name="about_title">About</string>
    <string name="settings_title">Settings</string>
    <string name="clients_title">Clients</string>
    <string name="no_clients_message">You have not saved any clients yet</string>
    <string name="update_settings">Update Settings</string>
    <string name="update_settings_success">Settings successfully updated</string>
    <string name="update_settings_back">No settings changed</string>
    <string name="update_settings_error">You must provide an appointment type</string>
    <string name="setting_appointment_type">What type of appointment do you offer?</string>
    <string name="setting_appointment_type_default"></string>
    <string name="setting_message_example">e.g. with appointment type \"massage\", the text message reminder to a client named Bob would look something like this: \nHi Bob. This text is just reminding you of your upcoming massage appointment, booked for December 1, 2019 @ 12:00 p.m. See you then!</string>
    <string name="setting_reminder_time">What time do you want automatic reminders to be sent each day?</string>
    <string name="setting_reminder_advance">How many days in advance do you want your clients to be reminded of their appointments?</string>
    <string name="setting_upcoming_cutoff">How far in the future should the Upcoming Appointments menu on the main page capture?</string>
    <string name="word_days">(days)</string>
    <string name="word_weeks">(weeks)</string>
    <string name="need_appointment_type_message">Please enter the type of appointment you offer before booking an appointment.</string>
    <string name="heading">FingerString Appointments</string>
    <string name="my_name">Mitchell Dooreleyers</string>
    <string name="add_appointment">New Appointment</string>
    <string name="reschedule_appointment">Reschedule Appointment</string>
    <string name="manage_appointments">View Appointments</string>
    <string name="manage_clients">Manage Clients</string>
    <string name="update_client_title">Update Client</string>
    <string name="confirm_client_delete">Deleting Client</string>
    <string name="delete_client_btn">Delete Client</string>
    <string name="update_client_btn">Save Changes</string>
    <string name="reschedule_button">Reschedule</string>
    <string name="cancel_button">Cancel</string>
    <string name="call_button">Call</string>
    <string name="text_button">Text</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="no_upcoming_appointments">No Upcoming Appointments</string>
    <string name="view_day_appointments">Appointments for</string>
    <string name="view_day_appointments_none">No appointments for</string>
    <string name="today_appointment_time">Default time</string>
    <string name="client_info">Client Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="disable_reminders">Disable automatic reminders for this client</string>
    <string name="appointment_info">Appointment Information</string>
    <string name="start_time">Start Time</string>
    <string name="duration">Duration (mins)</string>
    <string name="date">Date</string>
    <string name="create_client">Adding New Client</string>
    <string name="choose_client">Choosing Existing Client</string>
    <string name="create_client_switch">Add New</string>
    <string name="choose_client_switch">Choose Existing</string>
    <string name="swipe_instruction">Swipe screen left to select appointment date and time.</string>
    <string name="create_appointment">Book It!</string>
    <string name="conflicting_appointment_message">Unable to book because the date/time specified would conflict with another appointment:</string>
    <string name="unique_constraint_violation">The information you\'ve added for this appointment\'s new client is already in use by another client. Please double check the client\'s information, or select the existing client from the list.</string>
    <string name="title_activity_add_appointment">AddAppointmentActivity</string>
    <string name="back_button">Back</string>
    <string name="back_toast_message">No appointment saved</string>
    <string name="back_toast_message_client">No changes saved</string>
    <string-array name="hours">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="ampm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="durations">
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="reminders_disabled">Reminders disabled for this client</string>
    <string name="reminder_not_sent">Reminder not yet sent</string>
    <string name="reminder_sent">Reminder sent</string>
    <string name="reminder_failed">Reminder failed to send</string>
    <string name="confirm_cancel">Cancelling Appointment</string>
    <string name="cancelled_appointment">Appointment Cancelled</string>
    <string name="cancelling_error">An error occurred attempting to cancel that appointment</string>
    <string name="deleting_client_error">An error occurred attempting to delete that client</string>
    <string name="updating_error">An error occurred attempting to update the appointment</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>
    <string name="notification_description">FingerString Notifications</string>
    <string name="notification_title_sent">FingerString Automatic Reminders</string>
    <string name="notification_auto_remind_sent">Tomorrow\'s clients just got their reminders!</string>
    <string name="notification_title_failed">FingerString Permissions</string>
    <string name="notification_auto_remind_permissions">Automatic reminders failed. Tap here to adjust permissions.</string>
    <string name="permissions_warning">SMS and phone management permissions are required in order to send automatic reminders. Go to your settings to turn on SMS and Phone permissions for this app.</string>
</resources>