<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        tools:context=".AddAppointmentActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4FC3F7"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/bookAppointmentHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_appointment" />

            <android.support.design.widget.TabLayout
                android:id="@+id/infoTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4FC3F7"
                android:textAlignment="center"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/highlight_colour"
                app:tabMaxWidth="0dp" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/newAppointmentViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        </android.support.v4.view.ViewPager>


    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/addAppointmentBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addAppointmentCloseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:onClick="backClick"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/createAppointmentBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.8"
            android:backgroundTint="#FFF176"
            android:text="@string/create_appointment" />
    </LinearLayout>

</LinearLayout>
